# generative-ai-budget-tracker

./: .commitlintrc.json  .copilotignore  .dockerignore  .env.example  .gitignore  App.js  CHANGELOG.md  DEMO_SCRIPT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  DEVELOPMENT_STATUS.md  Dockerfile  Dockerfile.light  Dockerfile.web  PROJECT_COMPLETION_SUMMARY.md  README.md  SESSION_SUMMARY.md  ai_categorizer.py  analytics_engine.py  conftest.py  dashboard_v4.html  database_service.py  demo_analytics.html  docker-compose-minimal.yml  docker-compose.dev.yml  docker-compose.yml  index.html  main.py  mobile-dashboard.html  package-lock.json  package.json  priority4-demo.html  priority4_dashboard.html  pyproject.toml  pytest.ini  quick-start.sh  railway.json  railway.toml  requirements.txt  setup_database.py  (+12 more)
.github/: copilot-instructions.md
.github/workflows/: backend-image.yml  ci.yml
ai/prompts/: expense_categorization.txt  financial_advice.txt
archive/frontend-legacy-2025-08-12/: package.json
archive/frontend-legacy-2025-08-12/public/: index.html  manifest.json
archive/frontend-legacy-2025-08-12/src/: App.js  (+1 more)
backend/: .dockerignore  Dockerfile  Dockerfile.railway  README.md  budget_dev.db  pytest.ini  railway.toml  requirements-light.txt  requirements-minimal.txt  requirements-simple.txt  requirements.txt  run_server.py  start.sh  test_and_start.py  test_api.db  test_deps.py
backend/alembic/: env.py
backend/app/: ai_categorizer.py  ai_categorizer_light.py  ai_service.py  database.py  expense_db.py  financial_advisor.py  logging_config.py  main-minimal.py  main.py  main_light.py  ml_categorizer.py  spending_analyzer.py  visualization_api.py
backend/services/: financial_advisor.py  ml_categorizer.py
backend/tests/: conftest.py
database/: init.sql
docs/: IMMEDIATE_NEXT_STEPS.md  MODERNIZATION_ROADMAP.md  PHASE_2_IMMEDIATE_ACTION.md  PHASE_2_PLAN.md  PHASE_4_ML_INTEGRATION_PLAN.md  PROGRESS_DOCUMENTATION.md  RAILWAY_DEPLOYMENT_FIX.md  RAILWAY_IMAGE_SIZE_FIX.md  TECHNICAL_DOCS.md  deploy-backend-from-image.md  frontend-live-switch.md  frontend-reorg.md  phase-2-integration-complete.md  railway-services.md  railway-setup.md  setup.md
docs/daily/: 2025-08-13-progress.md  2025-08-14-progress.md
docs/handoff/: 2025-08-13-handoff.md  2025-08-14-handoff.md
docs/pr/: production-checklist.md
frontend/: .env.development  App.js  Dockerfile  README.md  package-lock.json  package.json
scripts/: tag-release.sh
src/: App.js
src/contexts/: AuthContext.js
src/navigation/: AppNavigator.js
src/screens/: LandingPage.js
src/services/: api.js  mockApi.js
src/styles/: GlobalStyles.css
src/theme/: index.js
src/utils/: categories.js
web-frontend/: index.html  index_v4.html
(+48 files in other folders)
