[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-budget-tracker"
version = "3.0.0"
description = "AI-powered budget tracking with advanced spending analytics"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "PCSchmidt", email = "your-email@example.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core FastAPI framework
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    
    # Database
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.23",
    "alembic>=1.13.0",
    
    # AI and ML - Full stack for local development
    "transformers>=4.36.0",
    "torch>=2.1.0",
    "huggingface-hub>=0.19.4",
    "tokenizers>=0.15.0",
    "safetensors>=0.4.1",
    
    # Data processing
    "pandas>=2.1.4",
    "numpy>=1.25.2",
    "scikit-learn>=1.3.2",
    
    # HTTP client for API calls
    "httpx>=0.25.0",
    
    # Authentication and security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    
    # Environment management
    "python-dotenv>=1.0.0",
    
    # Date/time handling
    "python-dateutil>=2.8.2",
    
    # Testing (optional for development)
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",  # For test client
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

production = [
    # Lightweight production dependencies (for Docker)
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "asyncpg>=0.29.0",
    "httpx>=0.25.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "python-dateutil>=2.8.2",
]

[project.urls]
Homepage = "https://github.com/PCSchmidt/generative-ai-budget-tracker"
Repository = "https://github.com/PCSchmidt/generative-ai-budget-tracker"
Issues = "https://github.com/PCSchmidt/generative-ai-budget-tracker/issues"

[tool.black]
line-length = 88
target-version = ['py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
